--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,4 +1,4 @@
-<h2>About MK Essentials</h2>
+<h2 class='title'>About MK Essentials</h2>
 <p>
   The idea for MK Essentials came from my distaste of
   paying a minimum $15 shipping to Canada when purchasing
