--- a/app/views/static/contact.html.erb
+++ b/app/views/static/contact.html.erb
@@ -1,4 +1,4 @@
-<h2>Contact MK Essentials</h2>
+<h2 class='title'>Contact MK Essentials</h2>
 <p>
   We can be reached at <a href="mailto:spawulski@gmail.com">spawulski@gmail.com</a>
 </p>
