--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,20 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
   </head>
+ <section class='section'>
+  <h1 class='title'>
+    <%= link_to 'Products', root_path %>
+  </h1>
+    <h4 class='subtitle'>
+      <%= link_to 'About', '/about' %>
+    </h4>
+    <h4 class='subtitle'>
+      <%= link_to "Contact", '/contact' %>
+    </h4>
 
-  <body>
+
+  </section>
+      <section class='section'>
     <%= yield %>
-  </body>
+        </section>
 </html>
