got about and contact pages sorted

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,10 @@
     <%= link_to 'Products', root_path %>
   </h1>
     <h4 class='subtitle'>
-      <%= link_to 'About', '/about' %>
+      <%= link_to 'About', '/pages/1' %>
     </h4>
     <h4 class='subtitle'>
-      <%= link_to "Contact", '/contact' %>
+      <%= link_to "Contact", '/pages/2' %>
     </h4>
 
 
