--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
   </head>
+  <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
  <section class='section'>
   <h1 class='title'>
     <%= link_to 'Products', root_path %>
