Working on category/show

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,14 @@
-<h3 class='title is-4'>All categories of products</h3>
+<h3 class='title is-4'>Categories of products</h3>
 <p>
   <% @categories.each do |category| %>
     <%= link_to category.name, category, class: 'button is-link' %>
   <% end %>
+</p>
+
+<p>
+  <div class="columns is-multiline">
+    <%= render partial: '/products/product',
+              collection: @products,
+              locals: { name_is_link: true } %>
+  </div>
 </p>
