--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -9,7 +9,7 @@
   <div class="horse card">
     <div class='card-content'>
       <h5 class='title'>
-        <%= link_to product.name.humanize, product %>
+        <%= link_to product.name, product %>
       </h5>
       <h3>Category id:
         <%= product.category_id %>
