added pagination for products

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,6 @@
 <h3 class='title is-4'>All Products</h3>
 
+<%= paginate @products %>
 <div class ="columns is-multiline">
   <%= render @products %>
 </div>
