--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,11 +1,16 @@
 <h3 class='title is-4'>Categories of products</h3>
 <p>
+<div class='buttons'>
   <% @categories.each do |category| %>
     <%= link_to category.name, category, class: 'button is-link' %>
   <% end %>
+  </div>
 </p>
 
 <p>
+<div class='columns'>
+  <%= paginate @products %>
+  </div>
   <div class="columns is-multiline">
     <%= render partial: '/products/product',
               collection: @products,
