Added search by category feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
     </h4>
 
     <%= form_with(url: search_results_products_path, method: "get", local: true) do %>
+      <%= collection_select(:categoryquery, :category, Category.all, :id, :name)%>
       <%= label_tag(:query, "Search for:") %>
       <%= text_field_tag(:query) %>
       <%= submit_tag("Search") %>
