--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,31 @@
 <h3 class='title is-4'>All Products</h3>
-
-<%= paginate @products %>
-<div class ="columns is-multiline">
-  <%= render @products %>
+<div class='section'>
+  <details>
+    <summary>Shopping Cart</summary>
+    <% if @cart.empty? %>
+      <p>No Items in cart.</p>
+    <% else %>
+      <ul>
+        <% @cart.each do |product| %>
+          <li><%= product.name %><%= link_to 'remove_from_cart', remove_from_cart_path(product), method: :delete, :class => "button is-outlined" %></li>
+        <% end %>
+      </ul>
+    <% end %>
+  </details>
 </div>
+
+  <div class='buttons'>
+    <% @categories.each do |category| %>
+      <%= link_to category.name, category, class: 'button is-link' %>
+    <% end %>
+  </div>
+
+
+  <div class='columns'>
+    <%= paginate @products %>
+  </div>
+  <div class="columns is-multiline">
+    <%= render partial: '/products/product',
+              collection: @products,
+              locals: { name_is_link: true } %>
+  </div>
