--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,10 +29,24 @@
       <%= submit_tag("Search", :class => "button is-primary") %>
     <% end %>
 
+    <div>
+      <details>
+        <summary>Shopping Cart</summary>
+        <% if @cart.empty? %>
+          <p>No Items in cart.</p>
+        <% else %>
+          <ul>
+            <% @cart.each do |product| %>
+              <li><%= product.name %><%= link_to 'remove_from_cart', remove_from_cart_path(product), method: :delete, :class => "button is-outlined" %></li>
+            <% end %>
+          </ul>
+        <% end %>
+      </details>
+    </div>
+
   </section>
   <body>
     <section class='section'>
-      <p>You have visted this site <%= pluralize @visit_count, 'time' %>.</p>
       <%= yield %>
     </section>
   </body>
