--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -16,11 +16,13 @@
         <li>Price: <%= number_to_currency(product.price/100) %></li>
         <li>Description: <%= product.desc %></li>
       </ul>
-      <% if @cart.include?(product) %>
-        <p><%= button_to 'remove_from_cart', remove_from_cart_path(product), method: :delete, :class => "button is-outlined" %></p>
-        <p>Product is in your cart</p>
-      <% else %>
-        <p><%= link_to 'add to cart', add_to_cart_path(product.id), method: :post %></p>
+      <% if @cart %>
+        <% if @cart.include?(product) %>
+          <p><%= button_to 'remove_from_cart', remove_from_cart_path(product), method: :delete, :class => "button is-outlined" %></p>
+          <p>Product is in your cart</p>
+        <% else %>
+          <p><%= link_to 'add to cart', add_to_cart_path(product.id), method: :post %></p>
+        <% end %>
       <% end %>
     </div>
   </div>
